--- a/KamleonApp/app/src/main/res/layout/layout_kmln_footer.xml
+++ b/KamleonApp/app/src/main/res/layout/layout_kmln_footer.xml
@@ -30,22 +30,31 @@
             android:text="@string/kmln_graph_footer_streak"
             android:textSize="@dimen/kmln_graph_footer_streak_title_text_size"/>
 
-        <TextView
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="8"
-            android:id="@+id/tvStreakValue1"
-            android:textColor="@color/kmln_graph_color_active"
-            android:textStyle="bold"
-            android:textSize="@dimen/kmln_graph_footer_streak_value1_text_size"/>/>
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="/20"
-            android:id="@+id/tvStreakValue2"
-            android:textColor="@color/kmln_graph_color_active"
-            android:textSize="@dimen/kmln_graph_footer_streak_value2_text_size"/>
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="8"
+                android:id="@+id/tvStreakValue1"
+                android:textColor="@color/kmln_graph_color_active"
+                android:textStyle="bold"
+                android:textSize="@dimen/kmln_graph_footer_streak_value1_text_size"/>/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="/20"
+                android:id="@+id/tvStreakValue2"
+                android:textColor="@color/kmln_graph_color_active"
+                android:textSize="@dimen/kmln_graph_footer_streak_value2_text_size"/>
+
+        </LinearLayout>
+
 
     </LinearLayout>
 
