--- a/KamleonApp/app/src/main/res/layout/activity_privacy.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_privacy.xml
@@ -6,13 +6,24 @@
     android:layout_height="match_parent"
     android:background="@color/bg_color_activity"
     tools:context=".activities.PrivacyActivity">
+    <ImageButton
+        android:layout_width="@dimen/nav_back_button_size"
+        android:layout_height="@dimen/nav_back_button_size"
+        android:src="@drawable/icn_nav_back"
+        android:id="@+id/btnNavBack"
+        android:background="@color/transparent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginStart="@dimen/nav_back_button_left"
+        android:layout_marginTop="@dimen/nav_back_button_top"/>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="100dp"
+        android:layout_marginTop="120dp"
         android:paddingHorizontal="36dp"
         android:orientation="vertical">
 
@@ -29,6 +40,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/privacyLayout1"
+            android:paddingStart="16dp"
             android:layout_marginTop="24dp"
             android:orientation="horizontal">
             
@@ -51,6 +63,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/privacyLayout2"
+            android:paddingStart="16dp"
             android:layout_marginTop="18dp"
             android:orientation="horizontal">
 
@@ -72,6 +85,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:paddingStart="16dp"
             android:id="@+id/privacyLayout3"
             android:layout_marginTop="18dp"
             android:orientation="horizontal">
@@ -105,21 +119,34 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
+        android:id="@+id/layoutBottomButtonContainer"
         android:paddingHorizontal="44dp"
-        android:paddingBottom="50dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent">
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/round_blue_button_height"
-        android:paddingVertical="0dp"
-        android:id="@+id/btnNext"
-        android:background="@drawable/bg_btn_round_blue"
-        android:textAllCaps="false"
-        android:text="@string/privacy_button_next"
-        android:textAppearance="@style/RoundBlueButtonTextStyle"
-        android:textColor="@drawable/color_text_button_blue_round"/>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnAcceptAll"
+            android:paddingVertical="12dp"
+            android:textAlignment="center"
+            android:text="@string/privacy_button_accept_all"
+            android:textColor="@drawable/color_blue_text_button"
+            android:clickable="true"
+            android:textAppearance="@style/CircularMediumFont"
+            android:textSize="@dimen/ts_16"/>
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/round_blue_button_height"
+            android:paddingVertical="0dp"
+            android:id="@+id/btnNext"
+            android:background="@drawable/bg_btn_round_blue"
+            android:textAllCaps="false"
+            android:layout_marginBottom="50dp"
+            android:text="@string/privacy_button_next"
+            android:textAppearance="@style/RoundBlueButtonTextStyle"
+            android:textColor="@drawable/color_text_button_blue_round"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
