--- a/KamleonApp/app/src/main/res/values/colors.xml
+++ b/KamleonApp/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="whiteEE">#EEFFFFFF</color>
+
     <color name="whitePressed">#16000000</color>
     <color name="transparent">#00000000</color>
 
