--- a/KamleonApp/app/src/main/res/layout/activity_setting.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_setting.xml
@@ -56,6 +56,8 @@
             <RelativeLayout
                 android:layout_width="150dp"
                 android:layout_height="150dp"
+                android:id="@+id/profileLayout"
+                android:clickable="true"
                 android:layout_gravity="center">
 
                 <ImageView
