--- a/KamleonApp/app/src/main/res/layout/activity_onboarding.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_onboarding.xml
@@ -176,6 +176,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@color/transparent"
                     app:darkModeEnabled="false"
+                    app:offset="1"
                     app:textSize="24"
                     app:textBold="true"
                     />
@@ -213,6 +214,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@color/transparent"
                     app:darkModeEnabled="false"
+                    app:offset="1"
                     app:textSize="28"
                     app:textBold="true"
                     />
@@ -248,6 +250,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@color/transparent"
                     app:darkModeEnabled="false"
+                    app:offset="1"
                     app:textSize="28"
                     app:textBold="true"
                     />
@@ -284,6 +287,7 @@
                     android:layout_marginTop="10dp"
                     android:background="@color/transparent"
                     app:darkModeEnabled="false"
+                    app:offset="1"
                     app:textSize="28"
                     app:textBold="true"
                     />
