--- a/KamleonApp/app/src/main/res/layout/activity_analytic.xml
+++ b/KamleonApp/app/src/main/res/layout/activity_analytic.xml
@@ -41,7 +41,7 @@
             android:orientation="vertical"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/btnNavBack"
+            app:layout_constraintTop_toBottomOf="@id/btnNavProfile"
             app:layout_constraintBottom_toBottomOf="parent">
 
             <LinearLayout
