--- a/KamleonApp/app/src/main/res/layout/fragment_image_pick.xml
+++ b/KamleonApp/app/src/main/res/layout/fragment_image_pick.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bg_bottom_sheet_fragment"
     tools:context=".fragments.ImagePickFragment">
 
@@ -19,10 +20,14 @@
             android:layout_height="wrap_content"
             android:src="@drawable/img_bottom_sheet_line"/>
 
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/image_profile"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:layout_width="96dp"
+            android:layout_height="96dp"
+            android:id="@+id/imageProfile"
+            app:shapeAppearanceOverlay="@style/roundedCorners"
+            android:scaleType="centerCrop"
+            android:layout_margin="10dp"
+            app:srcCompat="@drawable/image_profile"/>
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
