--- a/KamleonApp/app/src/main/res/values/themes.xml
+++ b/KamleonApp/app/src/main/res/values/themes.xml
@@ -4,7 +4,7 @@
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
         <item name="colorPrimary">@color/kamleon_blue</item>
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor">@color/black</item>
 
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
